Bug: 67841 - Cal Invites in Conversation View could use improvement Fix style so that scrollbar shows up in IE.
http://bugzilla.zimbra.com/show_bug.cgi?id=67841

Copied from Perforce
 Change: 341563

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -733,6 +733,10 @@ INPUT[type="text"].search_input, INPUT[type="text"].search_input-expanded {
 	border-spacing:0;
 }
 
+.Conv2Messages {
+	width:100%;
+}
+
 .Conv2Messages-bottom {
 	height:100%;
 }
